@@ -1,9 +1,14 @@
+TAG: qcreports_db-6-0-0-21
+DATE: 09/22/2015
+STAFF: lec
+CHANGES: TR12070
+1) mgd/VOC_InvalidProperties.py
+
 TAG: qcreports_db-6-0-0-20
 DATE: 09/21/2015
 STAFF: lnh 
 CHANGES: TR12143
 1) mgd/GO_EvidenceProperty.py
-
 
 TAG: qcreports_db-6-0-0-19
 DATE: 09/21/2015
